src/test/kalang-snippets/error/GenericInferConflict.kls
method not found:kalang.mixin.CollectionMixin.at(java.util.List<java.lang.Integer>,int,java.lang.String)@1
val list = [1,2]..asList()..at(9 , "");